test/tests/operators/set/invalid_target.txt
error: expected selector
 --> tests/operators/set/invalid_target.tql:6:5
  |
6 | set now() = 1
  |     ^^^^^ 
  |
